added related software links

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ and <code class="arg">bidding</code> the feature you want to test.
 </p>
 <blockquote>
 	<pre class="code">
-$ cucumber-nagios features/ebay.com.au/bidding.feature
+$ bin/cucumber-nagios features/ebay.com.au/bidding.feature
 Critical: 0, Warning: 0, 4 okay | value=4.000000;;;;
 	</pre>
 </blockquote>
@@ -96,4 +96,12 @@ Critical: 0, Warning: 0, 4 okay | value=4.000000;;;;
   <li>There will be bugs - <a href="http://github.com/auxesis/cucumber-nagios/issues">report them</a>!</li>
   <li><a href="http://en.wikipedia.org/wiki/MIT_License">MIT Licenced</a>.</li>
   <li>Written by <a href="http://holmwood.id.au/~lindsay/">Lindsay Holmwood</a>.</li>
+</ul>
+
+<h2>Related</h2>
+<ul class="related">
+  <li><a href="http://cukes.info/">Cucumber</a></li>
+  <li><a href="http://flapjack-project.com/">Flapjack</a></li>
+  <li><a href="http://collectd.org/">collectd</a></li>
+  <li><a href="http://puppet.reductivelabs.com/">Puppet</a></li>
 </ul>
