added description on how cucumber-nagios works under the hood

--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@ Critical: 0, Warning: 0, 4 okay | value=4.000000;;;;
 	</pre>
 </blockquote>
 
+<p>
+  <code>cucumber-nagios</code> uses 
+  <a href="http://cukes.info">Cucumber</a> &amp;
+  <a href="http://github.com/brynary/webrat/tree/master#readme">Webrat</a> 
+  with the 
+  <a href="http://mechanize.rubyforge.org/mechanize/">Mechanize</a> 
+  backend, so you can point it any site you can reach over HTTP 
+  (you don't have to have access to the site's code).
+</p> 
+
 <h2>Installing</h2>
 <p>
   <code>cucumber-nagios</code> is distributed as a RubyGem. 
