man up about flapjack. release early, release often

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Critical: 0, Warning: 0, 4 okay | value=4.000000;;;;
 <h2>Related</h2>
 <ul class="related">
   <li><a href="http://cukes.info/">Cucumber</a>, Behaviour Driven Development with elegance and joy.</li>
-<!--  <li><a href="http://flapjack-project.com/">Flapjack</a>, the delicious monitoring system.</li> -->
+  <li><a href="http://flapjack-project.com/">Flapjack</a>, the delicious monitoring system.</li> 
   <li><a href="http://collectd.org/">collectd</a>, the system statistics collection daemon.</li>
   <li><a href="http://puppet.reductivelabs.com/">Puppet</a>, configuration management & automated infrastructure.</li>
 </ul>
