fixed html to display image correctly

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ $ gem bundle
   project and put it on another machine easily.
 </p>
 <p class="notice">
-<img src="/images/important.png"/>
+<img src="images/important.png"/>
   Please note, the RubyGems Bundler requires RubyGems 1.3.5 or greater. 
 </p>
 
