Fixed syntax to reflect what's actually shipped

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Feature: google.com
   And I should be able to search for things
 
   Scenario: Searching for things
-    When I visit "http://www.google.com"
+    When I go to "http://www.google.com"
     And I fill in "q" with "wikipedia"
     And I press "Google Search"
     Then I should see "www.wikipedia.org"
