Fixed cucumber-nagios-gen path

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ From within your project directory:
 </p>
 <blockquote>
   <pre class="code">
-$ bin/cucumber-nagios-gen feature ebay.com.au bidding
+$ cucumber-nagios-gen feature ebay.com.au bidding
   </pre>
 </blockquote>
 
